fixed spacing in projects

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,8 @@ body {
 
 section {background-color:#fff;}
 
-.container {padding-left:0; padding-right:0;}
+.container {padding-left:0; padding-right:0; padding-top: 40px; margin-top: -40px;}
+.spacer {margin: 80px;}
 
 .parallax {
 	background-position:0 0;
@@ -95,8 +96,6 @@ a:hover, a:focus {text-decoration:none; color:#333;}
 .padbot70 {padding-bottom:70px !important;}
 .padbot80 {padding-bottom:80px !important;}
 .padtop0 {padding-top:0 !important;}
-.padtop10 {padding-top:-10 !important;}
-.padtop20 {padding-top:-20 !important;}
 
 .overlay {
 	position:absolute;
